# engram

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: README.md
adapters/codex/: config.toml
adapters/opencode/: opencode.json
docs/: ARCHITECTURE.md  SECURITY.md
examples/: config.toml  quickstart.md
src/engram/: __init__.py  config.py  health.py  integrations.py
src/engram/bridge/: promote.py  review.py
src/engram/capture/: active.py  importer.py  sessions.py
src/engram/capture/readers/: base.py  claude_code.py  codex.py  opencode.py
src/engram/cli/: main.py
src/engram/core/: atomic.py  dedup.py  freshness.py  locking.py  schema.py  store.py  text.py  tiers.py
src/engram/extract/: client.py  harvest.py
src/engram/mcp/: server.py
src/engram/recall/: context.py  rank.py
tests/: test_atomic.py  test_bridge.py  test_capture.py  test_cli.py  test_config.py  test_dedup.py  test_extract.py  test_freshness.py  test_health.py  test_importer.py  test_locking.py  test_mcp.py  test_pipeline_bugs.py  test_recall.py  test_schema.py  test_smoke.py  test_store.py  test_tiers.py
